Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/apiProduct__c.field-meta.xml
<CustomField>
    <fullName>apiProduct__c</fullName>
    <description>Used for Boomi Integration</description>
    <externalId>true</externalId>
    <inlineHelpText>Used for Boomi Integration</inlineHelpText>
    <label>apiProduct</label>
    <length>255</length>
    <type>Text</type>
</CustomField>