Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/BD_Integration_External_Id__c.field-meta.xml
<CustomField>
    <fullName>BD_Integration_External_Id__c</fullName>
    <description>Created for CPQ SC-220</description>
    <externalId>true</externalId>
    <label>Integration External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>