Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/BD_Product_Label__c.field-meta.xml
<CustomField>
    <fullName>BD_Product_Label__c</fullName>
    <description>Used in CPQ flows to show the product code and name in one field to the end user</description>
    <formula>Product2.ProductCode &amp;&quot; &quot;&amp;  Product2.IGOR_Description__c</formula>
    <label>Product Label</label>
    <type>Text</type>
</CustomField>