Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/BD_Valid_To__c.field-meta.xml
<CustomField>
    <fullName>BD_Valid_To__c</fullName>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>