Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/fxAutoId__c.field-meta.xml
<CustomField>
    <fullName>fxAutoId__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>fxAutoId</label>
    <type>AutoNumber</type>
</CustomField>