Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/fxCheckCurrency__c.field-meta.xml
<CustomField>
    <fullName>fxCheckCurrency__c</fullName>
    <description>This will confirm if the currency for te entry is the same as the External Id</description>
    <formula>TEXT( CurrencyIsoCode ) =  RIGHT( Pricebook_entry_ID__c ,3)</formula>
    <inlineHelpText>This will confirm if the currency for te entry is the same as the External Id</inlineHelpText>
    <label>fxCheckCurrency</label>
    <type>Checkbox</type>
</CustomField>