Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/fxCheckPartNum__c.field-meta.xml
<CustomField>
    <fullName>fxCheckPartNum__c</fullName>
    <description>Validates if the Part Number is same as Product Code</description>
    <formula>Product2.Partnum__c = Product2.ProductCode</formula>
    <inlineHelpText>Validates if the Part Number is same as Product Code</inlineHelpText>
    <label>fxCheckPartNum</label>
    <type>Checkbox</type>
</CustomField>