Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/fxFlowNotes__c.field-meta.xml
<CustomField>
    <fullName>fxFlowNotes__c</fullName>
    <label>fxFlowNotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>