Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/Item_Class__c.field-meta.xml
<CustomField>
    <fullName>Item_Class__c</fullName>
    <formula>Product2.Item_Class__c</formula>
    <label>IGOR Item Class</label>
    <type>Text</type>
</CustomField>