Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/PKI_PBE_ID_check__c.field-meta.xml
<CustomField>
    <fullName>PKI_PBE_ID_check__c</fullName>
    <formula>Pricebook_Entry_Formula__c = Pricebook_entry_ID__c</formula>
    <label>PKI PBE ID check</label>
    <type>Checkbox</type>
</CustomField>