Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/PRICE_Master__c.field-meta.xml
<CustomField>
    <fullName>PRICE_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Source of Truth for this Entry</description>
    <inlineHelpText>This is the Source of Truth for this Entry</inlineHelpText>
    <label>PRICE Master</label>
    <referenceTo>PRICE_Master__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>