Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/Pricebook_Entry_Formula__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_Formula__c</fullName>
    <description>Field to generate the unique external ID for Pricebook</description>
    <formula>IF(
   ISBLANK(Product2.Partnum__c)
    ,&quot;&quot;
    ,TRIM(Product2.Partnum__c)  + &#39;-&#39; + SUBSTITUTE(Pricebook2.Name,&quot; &quot;,&quot;&quot;) + &#39;-&#39; + TEXT( CurrencyIsoCode )
   )</formula>
    <label>Pricebook Entry Formula</label>
    <type>Text</type>
</CustomField>