Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/Pricebook_entry_ID__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_entry_ID__c</fullName>
    <description>Unique Pricebook Entry Code for the product dedup process</description>
    <externalId>true</externalId>
    <label>PKI PriceBookEntry Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>