Perkin-UAT/force-app/main/default/objects/PricebookEntry/fields/Product_Id_old__c.field-meta.xml
<CustomField>
    <fullName>Product_Id_old__c</fullName>
    <description>Field to maintain the related Product SF ID that was removed as part of the Product de duplication process
Exp Date: 31/12/2015</description>
    <label>Product Id - old</label>
    <length>20</length>
    <type>Text</type>
</CustomField>